--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/cloudflare": "^1.9.0",
     "@remix-run/cloudflare-workers": "^1.9.0",
     "@remix-run/react": "^1.9.0",
+    "@shopify/storefront-kit-react": "^2023.1.3",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
