--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 SESSION_SECRET = "SOME_SESSION_SECRET"
-SENDGRID_API_KEY = "SENDGRID_KEY"
 MAILCHIMP_API_KEY = "SOME_KEY"
+MANDRILL_API_KEY = "SOME_KEY"
