Loooots of updates

--- a/package.json
+++ b/package.json
@@ -15,18 +15,25 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.7.4",
-    "@remix-run/cloudflare": "^1.9.0",
-    "@remix-run/cloudflare-workers": "^1.9.0",
-    "@remix-run/react": "^1.9.0",
+    "@headlessui/react": "^1.7.15",
+    "@remix-run/cloudflare": "^1.17.1",
+    "@remix-run/cloudflare-workers": "^1.17.1",
+    "@remix-run/react": "^1.17.1",
+    "@shopify/hydrogen": "^2023.4.5",
     "@shopify/storefront-kit-react": "^2023.1.3",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "date-fns": "2.30.0",
+    "react-day-picker": "8.8.0",
+    "react-popper": "2.3.0",
+    "focus-trap-react": "10.1.4",
+    "@tailwindcss/forms": "^0.4.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
-    "@remix-run/dev": "^1.9.0",
-    "@remix-run/eslint-config": "^1.9.0",
+    "@remix-run/dev": "^1.17.1",
+    "@remix-run/eslint-config": "^1.17.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
